fix: register unfinished
